# apis/query/src/api/controllers/requests/getNftOwnersAnonSetQuery.ts
@@ -1,0 +1,10 @@
+import {
+  IsDefined,
+  IsEthereumAddress,
+} from 'class-validator'
+
+export class getNftOwnersAnonSetQuery {
+  @IsDefined()
+  @IsEthereumAddress()
+  tokenAddress: string
+}
